product_docs/docs/warehousepg/7.3/ref_guide/modules/external_components/index.mdx
---
title: External components
description: Separately installed tools and packages that integrate with WarehousePG but aren't database extensions.
displayBanner: ''
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/docs/7x/ref_guide/modules/external_components/index.md
---

External components are separately installed tools that extend WarehousePG's capabilities beyond the database itself.

-   [PXF](../../../install_guide/additional_modules/external_components/install_pxf.mdx) - Provides access to external data stores including Hadoop, object storage, and relational databases.
-   [R Data Science Library](../../../install_guide/additional_modules/external_components/install_r_dslib.mdx) - Provides a collection of data science R packages for use with PL/R.
-   whpg-backup - Provides parallel backup and restore for WarehousePG clusters.
-   whpg-backup-s3-plugin - Adds Amazon S3 support to whpg-backup.
-   [WarehousePG Enterprise Manager](/supported-open-source/warehousepg/wem/) - Provides a web-based management and monitoring interface for WarehousePG clusters.
-   [FlowServer for WarehousePG](/supported-open-source/warehousepg/flowserver/) - Provides workflow orchestration and scheduling for WarehousePG.
-   [WarehousePG Copy](/supported-open-source/warehousepg/whpg-copy/) - Provides high-performance data loading and unloading for WarehousePG.
-   [WarehousePG Disaster Recovery](/supported-open-source/warehousepg/whpg-dr/) - Provides physical backups, point-in-time recovery, and warm standby for WarehousePG clusters.
