product_docs/docs/warehousepg/7.5/ref_guide/modules/external_components/index.mdx
---
# Imported from the WHPG docs repo (https://github.com/warehouse-pg/whpg-docs)
# Changes made here may be overwritten. Prefer making changes in the source repo instead.
# See the originalFilePath value below for a link to the source of this file in the WHPG docs repo.
#
# To make changes that apply _only_ to EDB's documentation, try to cleanly separate those changes in the content
# (e.g. separate lines or ideally paragraphs or even sections, with clear indications that the content is EDB-specific) and 
# reach out to the docs team to discuss.

title: External Components
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/whpg/7x/ref_guide/modules/external_components/index.md
description: >-
  Separately installed tools and frameworks that integrate with WarehousePG but
  are not database extensions.
displayBanner: ''
---

External components are separately installed tools that extend WarehousePG's capabilities beyond the database itself.

-   [PXF](../../../install_guide/additional_modules/external_components/install_pxf.mdx) - Provides access to external data stores including Hadoop, object storage, and relational databases.
-   [Python Data Science Module](../../../install_guide/additional_modules/external_components/install_python_dsmod.mdx) - Provides a collection of data science Python packages for use with PL/Python.
-   [R Data Science Library](../../../install_guide/additional_modules/external_components/install_r_dslib.mdx) - Provides a collection of data science R packages for use with PL/R.
-   whpg-backup - Provides parallel backup and restore for WarehousePG clusters.
-   whpg-backup-s3-plugin - Adds Amazon S3 support to whpg-backup.
-   [WarehousePG Enterprise Manager](/supported-open-source/warehousepg/wem/) - Provides a web-based management and monitoring interface for WarehousePG clusters.
-   [FlowServer for WarehousePG](/supported-open-source/warehousepg/flowserver/) - Provides workflow orchestration and scheduling for WarehousePG.
-   [WarehousePG Copy](/supported-open-source/warehousepg/whpg-copy/) - Provides high-performance data loading and unloading for WarehousePG.
-   [WarehousePG Disaster Recovery](/supported-open-source/warehousepg/whpg-dr/) - Provides physical backups, point-in-time recovery, and warm standby for WarehousePG clusters.
